examples/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: autobuilder
spec:
  ports:
    - port: 8000
  selector:
    app: autobuilder
